src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
}

@font-face {
  font-family: 'Nunito';
  src: url('/fonts/Nunito/static/Nunito-Bold.ttf') format('truetype');
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

html.dark {
  color: #fff;
}

.dark .nav-links a {
  color: #fff;
}

html {
  font-family: 'Nunito', sans-serif;
}

.read-blog-button {
  width: 190px;
  text-align: center;
  background-color: white;
  padding: 10px;
  border-radius: 10px;
  font-size: 1.2rem;
  margin-top: 20px;
  transition: 0.5s;
  background-color: #000;
  color: #fff;
  border: 2px solid #000;

  &:hover {
    color: #000;
    background-color: #ffd705 !important;
    border: 2px solid #ffd705 !important;
  }
}

:global(.dark) .read-blog-button {
  background-color: #fff;
  color: #000;
}

.watch-youtube-button {
  width: 190px;
  text-align: center;
  background-color: transparent;
  padding: 10px;
  border-radius: 10px;
  font-size: 1.2rem;
  margin-top: 20px;
  transition: all 0.2s ease-in-out;
  color: #000;
  border: 2px solid black;

  &:hover {
    color: #000;
    background-color: #fa1dff;
    border: 2px solid #fa1dff;
  }
}

:global(.dark) .watch-youtube-button {
  color: #fff;
  border: 2px solid white;
}

.me-description {
  color: #9d9d9d;
}

.scroll-section-inner {
  width: 400vw;
  display: flex;
  flex-direction: row;
  position: relative;
}

.z-80 {
  z-index: 80;
}
.z-99 {
  z-index: 999;
}

.most-important {
  color: #fa1dff;
}

